Version 0.6.1
http://svn.edgewall.org/repos/genshi/tags/0.6.1/
(???, from branches/stable/0.6.x)

 * Fix for error in how `HTMLFormFiller` would handle `textarea` elements if
   no value was not supplied form them.


Version 0.6
http://svn.edgewall.org/repos/genshi/tags/0.6.0/
(Apr 22 2010, from branches/stable/0.6.x)

 * Support for Python 2.3 has been dropped.
 * Rewrite of the XPath evaluation engine for better performance and improved
   correctness. This is the result of integrating work done by Marcin Kurczych
   during GSoC 2008.
 * Updated the Python AST processing for template code evaluation to use the
   `_ast` module instead of the deprecated `compiler` package, including an
   adapter layer for Python 2.4. This, too, is the result of integrating work
   done by  Marcin Kurczych during GSoC 2008.
 * Added caching in the serialization stage for improved performance in some
   cases.
 * Various improvements to the HTML sanitization filter.
 * Fix problem with I18n filter that would get confused by expressions in
   attribute values when inside an `i18n:msg` block (ticket #250).
 * Fix problem with the transformation filter dropping events after the
   selection (ticket #290).
 * `for` loops in template code blocks no longer establish their own locals
   scope, meaning you can now access variables assigned in the loop outside
   of the loop, just as you can in regular Python code (ticket #259).
 * Import statements inside function definitions in template code blocks no 
   longer result in an UndefinedError when the imported name is accessed 
   (ticket #276).
 * Fixed handling of relative URLs with fragment identifiers containing colons
   in the `HTMLSanitizer` (ticket #274).
 * Added an option to the `HTMLFiller` to also populate password fields.
 * Match template processing no longer produces unwanted duplicate output in
   some cases (ticket #254).
 * Templates instantiated without a loader now get an implicit loader based on